--- a/css/contactus.css
+++ b/css/contactus.css
@@ -1,7 +1,6 @@
 
 #maintext{
 	padding-top: 20px;
-	width: 500px;
 	line-height: 25px;
 
 }
@@ -9,7 +8,7 @@
 #menubarr.contactus a{
 	color: black;
 }
-#maintext img{
+#mainstuff img{
 	height: 25px;
 	width: 25px;
 	display:inline;
