--- a/css/events.css
+++ b/css/events.css
@@ -5,7 +5,6 @@
 #maintext{
 	font-size: large;
 	line-height: 30px;
-	width: 590px;
 }
 
 h2{
@@ -16,4 +15,7 @@ h2{
 	width:550px;
 	height:400px;
 	padding-top: 20px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto
 }
