--- a/css/index.css
+++ b/css/index.css
@@ -3,8 +3,8 @@ body{
 
 }
 #photo img{
-	height:400px;
-	width:550px;
+/*	height:400px;*/
+/*	width:550px;*/
     display: block;
     margin-left: auto;
     margin-right: auto
