--- a/css/global.css
+++ b/css/global.css
@@ -2,6 +2,7 @@
 head{
 }
 
+/*
 #content img{
 	display:block;
 	height:100px;
@@ -9,17 +10,19 @@ head{
 	margin-right: auto;
 	width:700px;
 }
+*/
 
 body {
-	font-family: verdana;
-	font-size: 10px;
+	font-family:Arial, Helvetica, sans-serif;
+	font-size: small;
 	margin: 0 auto;
 	padding: 0px;
 	background: #44b5da;
-	text-align: center;
+	text-align: left;
 	width:700px;
 }
 
+/*
 #content{
 	width: 900px;
 	text-align: left;
@@ -31,8 +34,13 @@ body {
 #content img{
 	height: 100px;
 	width: 700px;
-	padding-bottom: 5px;
+	padding-bottom: 10px;
 	border: 0px;
+}
+*/
+
+h2, h3{
+    text-align: center;
 }
 
 #border{
@@ -135,7 +143,7 @@ body {
 	text-align: left;
 	font-weight: bold;
 	text-decoration: none;
-	width: 900px;
+/*	width: 900px;*/
 }
 
 h2{
@@ -143,20 +151,20 @@ h2{
 }
 /*footer styling*/
 #footerback{
-	position: relative;
-	margin-top: -35px;
-	background-color: #cccccc;
-	border-width: 1px;
-	border-top: 0px;
-	border-bottom: 0px;
-	border-style: solid;
-	border-color: black;
+/*	position: relative;*/
+/*	margin-top: -35px;*/
+/*	background-color: #cccccc;*/
+/*	border-width: 1px;*/
+/*	border-top: 0px;*/
+/*	border-bottom: 0px;*/
+/*	border-style: solid;*/
+/*	border-color: black;*/
 }
 #footer {
 
     height: 35px;
 	line-height: 35px;
-    width: 900px;
+/*    width: 900px;*/
 	font-size: x-small;
     /*border: 1px solid;
 	border-left: 0px;
@@ -189,8 +197,8 @@ h2{
 #footer li{
 	float:left;
     text-align: center;
-	padding-right: 50px;
-	padding-left: 25px;
+	padding-right: 45px;
+/*	padding-left: 10px;*/
 	text-decoration:none;
 
 }
