--- a/css/index.css
+++ b/css/index.css
@@ -2,12 +2,18 @@
 body{
 
 }
+iframe{
+    padding-top: 50px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
 #photo img{
 /*	height:400px;*/
 /*	width:550px;*/
     display: block;
     margin-left: auto;
-    margin-right: auto
+    margin-right: auto;
 
 
 }
