--- a/Assignment4/public/css/style.css
+++ b/Assignment4/public/css/style.css
@@ -6,3 +6,33 @@ body {
 a {
   color: #00B7FF;
 }
+
+ul {
+    padding: 0;
+    margin: 0;
+}
+p{
+    height: 30px;}
+#topContainer{
+    height: 93vh;
+}
+#topNav{
+    height: 7vh;
+    width:100%;
+    background: #663399;
+}
+.nav > li {
+    display: inline-block;
+    padding: 10px;
+}
+.nav > li a {
+    color:white;
+}
+@media only screen and (max-device-width: 480px) {
+    #topContainer{
+        height: 35vh;
+    }
+    #topNav {
+        height: 2vh;
+    }
+}
