--- a/Assignment4/views/index.ejs
+++ b/Assignment4/views/index.ejs
@@ -2,9 +2,17 @@
 <html>
   <head>
     <title><%= title %></title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../public/css/style.css" />
+    <script src="../public/js/sticky-nav-fluid.js"></script>
   </head>
   <body>
+    <nav>
+    <ul id="topNav" class="nav">
+        <li><a href="/">Home</a></li>
+        <li><a href="/news">News</a></li>
+
+    </ul>
+    </nav>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
   </body>
