--- a/Assignment4/views/news.ejs
+++ b/Assignment4/views/news.ejs
@@ -2,9 +2,17 @@
 <html>
 <head>
     <title><%= title %></title>
-    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="stylesheet" href="../public/css/style.css" />
+    <script src="../public/js/sticky-nav-fluid.js"></script>
 </head>
 <body>
+    <nav>
+    <ul id="topNav" class="nav">
+        <li><a href="/">Home</a></li>
+        <li><a href="/news">News</a></li>
+
+    </ul>
+    </nav>
 <ul>
     <% for(var i=0; i<data.length; i++) {
         var post = data[i];
