--- a/Assignment4/public/css/style.css
+++ b/Assignment4/public/css/style.css
@@ -17,9 +17,9 @@ p{
     height: 93vh;
 }
 #topNav{
-    height: 7vh;
+    height: 5vh;
     width:100%;
-    background: #663399;
+    background: #0066FF;
 }
 .nav > li {
     display: inline-block;
@@ -35,4 +35,7 @@ p{
     #topNav {
         height: 2vh;
     }
+}
+img {
+    width: 75%;
 }
