--- a/css/global.css
+++ b/css/global.css
@@ -19,7 +19,7 @@ body {
 	padding: 0px;
 	background: #44b5da;
 	text-align: left;
-	width:700px;
+	width:100%;
 }
 
 /*
@@ -57,7 +57,7 @@ h2, h3{
 .menuwrapper {
 	margin:0px auto;
 	padding-top: 5px;
-	width: 900px;
+	width: 100%;
 	height: 50px;
 	background-color:rgba(3,6,77,0.3);
 }
