--- a/Assignment4/views/news.ejs
+++ b/Assignment4/views/news.ejs
@@ -5,7 +5,7 @@
 </head>
 <body>
     <% include navbar %>
-    <div class="container">
+    <div class="container-fluid">
 <ul>
     <% for(var i=0; i<data.length; i++) {
         var post = data[i];
