--- a/Assignment4/public/css/style.css
+++ b/Assignment4/public/css/style.css
@@ -10,6 +10,7 @@ a {
 ul {
     padding: 0;
     margin: 0;
+    list-style-type: none;
 }
 p{
     height: 30px;}
@@ -21,9 +22,14 @@ p{
     width:100%;
     background: #0066FF;
 }
+li
+{
+    list-style-type: none;
+}
 .nav > li {
     display: inline-block;
     padding: 10px;
+
 }
 .nav > li a {
     color:white;
