--- a/css/largegroup.css
+++ b/css/largegroup.css
@@ -7,11 +7,9 @@ h2{
 	text-align:center;
 }
 #photo img{
-	height:400px;
-	width:550px;
     display: block;
     margin-left: auto;
-    margin-right: auto
+    margin-right: auto;
 
 }
 
