--- a/css/anythingslider.css
+++ b/css/anythingslider.css
@@ -56,7 +56,7 @@
 
 /* start-stop button, stopped, default state */
 .anythingSlider-default .anythingControls a.start-stop {
-	background-color: #040;
+	background-color: #337ab7;
 	color: #ddd;
 }
 /* start-stop button, playing, default state */
@@ -80,23 +80,23 @@
 */
 /* slider window - top & bottom borders, active state */
 .anythingSlider-default.activeSlider .anythingWindow {
-	border-color: #7C9127;
+	border-color: #337ab8;
 }
 /* Navigation buttons, active state */
 .anythingSlider-default.activeSlider .anythingControls a {
 	/* background image = top shadow */
-	background-color: #7C9127;
+	background-color: #337ab7;
 }
 /* Navigation current & hovered button, active state */
 .anythingSlider-default.activeSlider .anythingControls a.cur,
 .anythingSlider-default.activeSlider .anythingControls a:hover {
 	/* background image removed */
-	background: #7C9127;
+	background: #337ab7;
 }
 
 /* start-stop button, stopped, active state */
 .anythingSlider-default.activeSlider .anythingControls a.start-stop {
-	background-color: #080;
+	background-color: #337ab7;
 	color: #fff;
 }
 /* start-stop button, playing, active state */
